tests/valid/lifetime/hrt_fn_level_and_bound_lifetimes.facet
fn accept<'a>(
    f: unrestricted for<'a> fn(unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize,
    r: unrestricted &'a unrestricted isize
) -> unrestricted &'a unrestricted isize {
    r
}
