tests/invalid/lifetime/hrt_duplicate_lifetime.facet
fn bad(f: unrestricted for<'a, 'a> fn(unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize) -> unrestricted () {
    ()
}
